--- a/Regression analysis/notebooks/Regression_analysis_Seoul_bike_sharing.ipynb
+++ b/Regression analysis/notebooks/Regression_analysis_Seoul_bike_sharing.ipynb
@@ -49,7 +49,7 @@
     "   2.3 Categorical variables<br>\n",
     "   2.4 Null values<br>\n",
     "   2.5 Outliers<br>\n",
-    "   2.6 Multicolinearity<br>\n",
+    "   2.6 Multicollinearity<br>\n",
     "   2.7 Distributions<br>\n",
     "3. Feature engineering<br>\n",
     "   3.1 Train/Test split<br>\n",
